<resources>
    <string name="app_name">FreelanceProject</string>
    <string name="user_profile_content_description">User Profile Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_text">Search</string>
    <string name="Profile_text">Profile</string>
    <string name="Projects_text">Projects</string>
    <string name="Messaging_text">Messaging</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Password</string>
    <string name="username_hint_text">Username</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Signup</string>
    <string name="create_account_button_text">Don\'t have an account?</string>
    <string name="already_user_button_text">already have account? sign up</string>
    <string name="logo_image_description">Brand Logo</string>
    <string name="client_radio_text">Client</string>
    <string name="freelancer_radio_text">Freelancer</string>
    <string name="account_type_text_view">Account Type</string>
    <string name="name_hint_text">Name</string>
    <string name="description_hint_text">Description</string>
    <string name="birthYear_hint_text">Birth Year</string>
    <string name="bottomNav_home">Home</string>
    <string name="bottomNav_search">Search</string>
    <string name="bottomNav_profile">Profile</string>
    <string name="bottomNav_projects">Projects</string>
    <string name="bottomNav_messages">Messages</string>
    <string name="pay_rates_header_text">Pay Rates</string>
    <string name="name_header_text">Name</string>
    <string name="email_header_text">Email</string>
    <string name="description_header_text">Description</string>
    <string name="birth_year_header_text">Birth Year</string>
    <string name="edit_profile_menu_item_text">Edit Profile</string>
    <string name="log_out_menu_item_text">Log Out</string>
</resources>
