<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditProfileFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/userImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:foreground="@drawable/image_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/edit_headers_style"
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/name_header_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userImageView"/>

            <EditText
                android:id="@+id/nameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:hint="@string/name_hint_text"
                android:inputType="textCapSentences|textShortMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameText" />

            <TextView
                android:id="@+id/emailText"
                style="@style/edit_headers_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/email_header_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTextInput" />

            <EditText
                android:id="@+id/emailTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:hint="@string/email_hint_text"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailText" />

            <TextView
                style="@style/edit_headers_style"
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/description_header_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTextInput" />

            <EditText
                android:id="@+id/descriptionTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:hint="@string/description_hint_text"
                android:inputType="textLongMessage|textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

            <TextView
                style="@style/edit_headers_style"
                android:id="@+id/birthYearText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/birth_year_header_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextInput" />

            <EditText
                android:id="@+id/birthYearTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/birthYear_hint_text"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthYearText" />


            <TextView
                style="@style/edit_headers_style"
                android:id="@+id/payRateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/pay_rates_header_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthYearTextInput" />

            <LinearLayout
                android:id="@+id/payRatesinput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payRateText">

                <!--                <LinearLayout-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_marginRight="16dp"-->
                <!--                    android:orientation="horizontal">-->

                <!--                    <ImageButton-->
                <!--                        android:id="@+id/decrement_min_button"-->
                <!--                        android:layout_width="20dp"-->
                <!--                        android:layout_height="match_parent"-->
                <!--                        android:layout_weight="1"-->
                <!--                        android:src="@drawable/ic_decrement_black_24dp" />-->

                <EditText
                    android:id="@+id/minRateTextInput"
                    android:layout_width="wrap_content"
                    android:minWidth="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:inputType="number"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/birthYearTextInput"
                    tools:hint="min" />

                <!--                    <ImageButton-->
                <!--                        android:id="@+id/increment_min_button"-->
                <!--                        android:layout_width="20dp"-->
                <!--                        android:layout_weight="1"-->
                <!--                        android:layout_height="match_parent"-->
                <!--                        android:src="@drawable/ic_increment_black_24dp" />-->
                <!--                </LinearLayout>-->


                <!--                <LinearLayout-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_gravity="right">-->

                <!--                    <ImageButton-->
                <!--                        android:id="@+id/decrement_max_button"-->
                <!--                        android:layout_width="20dp"-->
                <!--                        android:layout_height="match_parent"-->
                <!--                        android:layout_weight="1"-->
                <!--                        android:src="@drawable/ic_decrement_black_24dp" />-->

                <EditText
                    android:id="@+id/maxRateTextInput"
                    android:layout_width="wrap_content"
                    android:minWidth="80dp"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/minRateTextInput"
                    app:layout_constraintTop_toBottomOf="@+id/birthYearTextInput"
                    tools:hint="max" />

                <!--                    <ImageButton-->
                <!--                        android:id="@+id/increment_max_button"-->
                <!--                        android:layout_width="20dp"-->
                <!--                        android:layout_height="match_parent"-->
                <!--                        android:layout_weight="1"-->
                <!--                        android:src="@drawable/ic_increment_black_24dp" />-->
                <!--                </LinearLayout>-->

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="enterAlways" />
    </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</FrameLayout>